# nequip-nac

./: .gitignore  .yamllint  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yaml
configs/: 2state_nl4_b16.yaml  b16_two_state.yaml  b16_w10_nl4.yaml  minimal.yaml  tutorial.yaml
nequip_nac/: _keys.py  _version.py
nequip_nac/data/: __init__.py  stats_manager.py
nequip_nac/model/: __init__.py  _grads.py  _nequip_nac.py  _scaling.py  nequip_nac_model.py
nequip_nac/nn/: __init__.py  _atomwise.py  _grad_output.py  _nac_module.py  multi_force_grad.py  nac_module.py
nequip_nac/train/: __init__.py  metrics_manager.py
tests/: conftest.py
tests/model/: test_nequip_nac.py
trial_data/split_two_state_data/: test.xyz  val.xyz
