[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nequip-nac"
dynamic = ["version"]
description = "NequIP-NAC is an open-source framework for predicting non-adiabatic couplings using E(3)-equivariant neural network interatomic potentials."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Menghang (David) Wang"},
    {name = "Chuin Wei Tan"},
    {name = "Albert Musaelian"},
]
dependencies = [
    "nequip>=0.16.0,<0.18.0"
]

[project.urls]
Repository = "https://github.com/mir-group/nequip-nac"

[tool.setuptools]
packages = {find = {include = ["nequip_nac", "nequip_nac.*"]}}

[tool.setuptools.dynamic]  # get version from nequip/_version.py
version = {attr = "nequip_nac._version.__version__"}

[tool.ruff]
line-length = 88
exclude = [
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "docs",
    ".git",
    "__pycache__",
    "examples",
    "tmp"
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E226", "E501", "E741", "E743", "C901", "E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 127
select = ["E", "F", "W", "C"]
ignore = ["E226", "E501", "E741", "E743", "C901", "W503", "E203"]
exclude = [
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "docs",
    ".git",
    "__pycache__",
    "examples",
    "tmp"
]

[project.entry-points."nequip.extension"]
init_always = "nequip_nac"
